--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
-    "vue": "^3.0.7",
-    "vue-router": "^4.2.4"
+    "lodash": "^4.17.21",
+    "vue": "^3.2.36",
+    "vue-router": "^4.2.4",
+    "vuex": "^4.0.2"
   }
 }
